# club_sabana_backend

./: .gitignore  Cargo.toml  Dockerfile  combined_rust_files.txt  db_schema.txt  fly.toml  rust_digest  w
bcrypt_hasher/: Cargo.toml
bcrypt_hasher/src/: lib.rs
entities/: Cargo.toml
entities/src/: category.rs  court.rs  date_serde.rs  datetime_serde.rs  datetime_serde_option.rs  lib.rs  report.rs  request.rs  tournament.rs  training.rs  tuition.rs  user.rs
http_api/: Cargo.toml
http_api/src/: auth.rs  category_endpoints.rs  court_endpoints.rs  err.rs  main.rs  report_endpoints.rs  request_endpoints.rs  tournament_endpoints.rs  training_endpoints.rs  tuition_endpoints.rs  user_endpoints.rs
turso_db/: Cargo.toml
turso_db/src/: lib.rs  migration.rs
turso_db/src/category_repo/: mod.rs
turso_db/src/court_repo/: mod.rs
turso_db/src/request_repo/: mod.rs
turso_db/src/tournament_repo/: mod.rs
turso_db/src/training_repo/: mod.rs
turso_db/src/tuition_repo/: mod.rs
turso_db/src/user_repo/: mod.rs
use_cases/: Cargo.toml
use_cases/src/: lib.rs
use_cases/src/category_service/: err.rs  mod.rs  repository_trait.rs
use_cases/src/court_service/: err.rs  mod.rs  repository_trait.rs
use_cases/src/report_service/: err.rs  mod.rs
use_cases/src/request_service/: err.rs  mod.rs  repository_trait.rs
use_cases/src/tournament_service/: err.rs  mod.rs  repository_trait.rs
use_cases/src/training_service/: err.rs  mod.rs  repository_trait.rs
use_cases/src/tuition_service/: err.rs  mod.rs  repository_trait.rs
use_cases/src/user_service/: err.rs  mod.rs  (+3 more)
