[package]
name = "entities"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
uuid = { version = "1.13.1", features = ["serde", "v4"] }
enum2str = "0.1.11"
partial_struct = "0.4.4"
