[package]
name = "turso_db"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.86"
libsql = "0.6.0"
use_cases = { path = "../use_cases" }
entities = { path = "../entities" }
uuid = { version = "1.13.1", features = ["v4"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "rt"] }
rstest = "0.24.0"
chrono = "0.4.39"
